apps/static/overlays/test/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - set-in-overlay
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /schemas/self
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: svc
          kind: Service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /schemas
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: source-meta-svc
          kind: Service
          port: 8000
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: svc
          kind: Service
          port: 80
