apps/static/overlays/test/source-meta-api-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: source-meta-api-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - static.don.projects.digilab.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /schemas
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: source-meta-svc
          kind: Service
          port: 8000
