apps/static/overlays/test/source-meta-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-source-meta-from-schema-register
spec:
  podSelector:
    matchLabels:
      app: source-meta
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tn-don-api-test
          podSelector:
            matchLabels:
              app: schema-register
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateway
      ports:
        - protocol: TCP
          port: 8000
