apps/static/overlays/test/source-meta-schemas-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: source-meta-schemas-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - schemas.don.projects.digilab.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api-design-rules
        - path:
            type: PathPrefix
            value: /api-register
        - path:
            type: PathPrefix
            value: /demo
        - path:
            type: PathPrefix
            value: /logboek-dataverwerkingen
        - path:
            type: PathPrefix
            value: /policy-as-code
        - path:
            type: PathPrefix
            value: /self
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: source-meta-svc
          kind: Service
          port: 8000
